tests/lean/eqn_compiler_ctor.lean.expected.out
eqn_compiler_ctor.lean:8:4: error: equation compiler failed (use 'set_option trace.eqn_compiler.elim_match true' for additional details)
